<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Yotobe</string>
    <string name="action_back">Back</string>
    <string name="action_forward">Forward</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_home">Home</string>
    <string name="action_pip">Picture-in-Picture</string>
    <string name="action_desktop">Desktop Mode</string>
    <string name="action_download">Download</string>
    <string name="download_title">Download Video / Audio</string>
    <string name="download_prompt">Choose an option for the current video:</string>
    <string name="download_copy_url">Copy Video URL</string>
    <string name="download_open_external">Open in External Downloader</string>
    <string name="download_web_tool">Download via Web Portal</string>
    <string name="url_copied">Video URL copied to clipboard</string>
    <string name="pip_not_supported">Picture-in-Picture is not supported on this device</string>
    <string name="action_about">About</string>
    <string name="about_title">About Yotobe</string>
    <string name="about_developer_title">Engineered by</string>
    <string name="about_developer_name">Muhammad Haris Zubair</string>
    <string name="about_version">v1.0.0 (Mobile Edition)</string>
    <string name="about_desc">A high-performance, ad-free YouTube experience engineered with native ad-blocking, background audio playback, Picture-in-Picture, and seamless media extraction.</string>
    <string name="github_url">https://github.com/haris-ui/yotobe</string>
    <string name="btn_close">Close</string>
    <string name="playback_channel_name">Background Playback</string>
    <string name="playback_channel_desc">Active playback notifications for background audio</string>
</resources>
